src/main/scala/chapter2/shoutput/RunREPL2.output
// #output
scala> number = 7
<console>:11: error: reassignment to val
       number = 7
              ^
// #output

